# lite-lcel

./: CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
examples/: async_chain.py  autonomous_agent.py  basic_chain.py  branch_and_fallback.py  parallel_chain.py  rag_chain.py  retry_chain.py  stateful_chain.py  streaming_chain.py  tool_calling_chain.py
lite_lcel/: __init__.py  agents.py  base.py  callbacks.py  cli.py  memory.py  parsers.py  prompts.py  tools.py  vectorstores.py
lite_lcel.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
lite_lcel/models/: __init__.py  base.py  mock.py  openai.py
tests/: __init__.py  test_advanced.py  test_agents_and_retry.py  test_base.py  test_integration.py  test_memory_and_tools.py  test_prompts.py  test_vectorstores.py
