[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lite-lcel"
version = "0.1.0"
description = "A lightweight implementation of LangChain Expression Language (LCEL) in Python."
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "xaynx"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = []

[project.scripts]
lite-lcel = "lite_lcel.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.20.0",
    "black>=23.0.0",
    "ruff>=0.1.0"
]
openai = [
    "openai>=1.0.0"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["lite_lcel*"]
